# poetry-bumpversion

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  __init__.py  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  Makefile  devcontainer.json
.github/workflows/: build.yml  deploy.yml
poetry_bumpversion/: plugin.py
src/poetry_bumpversion/: __init__.py  models.py  plugin.py
tests/: __init__.py  pip-constraints.txt  test_main.py
tests/assets/project_file_not_found/: pyproject.toml
tests/assets/project_with_replacements/: README.md  pyproject.toml
tests/assets/pyproject-files/: file-to-process-does-not-exist.toml  nothing-to-update-in-file.toml  valid-instructions.toml  valid-replacements.toml
tests/assets/sample-project/: README.md  pyproject.toml
