[tool.poetry]
name = "poetry-bumpversion"
version = "0.0.0"
description = "Poetry plugin to update project version strings on poetry version command"
authors = ["Abdul Monim <abdul.monim@graaho.com>"]
readme = "README.rst"
packages = [{ include = "poetry_bumpversion" }]
repository = "https://github.com/monim67/poetry-bumpversion"
license = "MIT"
keywords = ["poetry", "bump", "version", "plugin"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0a1"

[tool.poetry.group.build.dependencies]
black = "^22.3.0"
pytest = "^7.1.3"
rstcheck = "^6.0.0.post1"
poethepoet = "^0.15.0"

[tool.poetry.group.dev.dependencies]
tox = "^3.24.5"
docutils = "^0.18.1" # RST Preview
Pygments = "^2.12.0" # RST Preview

[tool.poetry.plugins."poetry.application.plugin"]
poetry_bumpversion = "poetry_bumpversion.plugin:BumpVersionPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"
source = ["poetry_bumpversion"]
relative_files = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{310,39,38,37}

[testenv]
commands =
    poe lint
    pytest
allowlist_externals =
    poe
    pytest
"""

[tool.poe.tasks.lint]
shell = """
  python -m black --check poetry_bumpversion tests
  python -m isort --check-only poetry_bumpversion tests
  rstcheck --report-level warning *.rst
  """
