[tool.poetry]
name = "poetry-bumpversion"
version = "0.0.0"
description = "Poetry plugin to update project version strings on poetry version command"
authors = ["Munim Munna <6266677+monim67@users.noreply.github.com>"]
readme = "README.rst"
packages = [{ include = "poetry_bumpversion" }]
repository = "https://github.com/monim67/poetry-bumpversion"
license = "MIT"
keywords = ["poetry", "bump", "version", "plugin"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.1"

[tool.poetry.group.build.dependencies]
black = "^22.3.0"
pytest = "^7.1.3"
interrogate = "^1.5.0"
rstcheck = "^6.0.0.post1"
poethepoet = "^0.15.0"
coverage = {extras = ["toml"], version = "^6.4.4"}

[tool.poetry.group.dev.dependencies]
tox = "^3.24.5"
docutils = "^0.18.1" # RST Preview
Pygments = "^2.12.0" # RST Preview

[tool.poetry.plugins."poetry.application.plugin"]
poetry_bumpversion = "poetry_bumpversion.plugin:BumpVersionPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
parallel = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{310,39,38,37}

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install --only main,build
    poetry run poe lint
    poetry run pytest
"""

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
fail-under = 100
exclude = ["src/tests"]
ignore-regex = ["^test"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.poe.tasks]
lint = [
    { cmd = "python -m black --check poetry_bumpversion tests" },
    { cmd = "python -m isort --check-only poetry_bumpversion tests" },
    { cmd = "rstcheck --report-level warning *.rst" },
]
test-cov = [
    { cmd = "coverage run --source=poetry_bumpversion,tests -m pytest" },
    { cmd = "coverage combine" },
    { cmd = "coverage xml" },
]
docstring-cov = "interrogate ."