[tool.poetry]
name = "test-package"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "test_package"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."test_package/__init__.py"]

[tool.poetry_bumpversion.file."test_package/version.py"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.poetry_bumpversion.file."README.md"]
search = 'version: {current_version}'
replace = 'version: {new_version}'
